--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_API_URL=https://5173-aungmon72-aungmon72owne-yd62h476hje.ws-us117.gitpod.io/
+THIS_PROJECT_URL=https://5173-aungmon72-aungmon72owne-yd62h476hje.ws-us117.gitpod.io/
+VITE_API_URL=https://3000-aungmon72-sctpreactback-pbixbjktgt9.ws-us117.gitpod.io
+VITE_API_URL=https://3000-aungmon72-sctpreactback-pbixbjktgt9.ws-us117.gitpod.io
